[package]
name = "pzip"
version = "0.2.0"
authors = ["Dan Watson <dcwatson@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Rust library and CLI for the PZip encrypted file format."
repository = "https://github.com/dcwatson/pz"

[dependencies]
clap = "2"
hex = "0.4"
ring = "0.17.0-alpha.8"
libdeflater = "0.7"

[lib]
name = "pzip"
path = "src/lib.rs"

[[bin]]
name = "pz"
path = "src/main.rs"
