[package]
name = "pzip"
version = "0.2.1"
authors = ["Dan Watson <dcwatson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Rust library and CLI for the PZip encrypted file format."
homepage = "http://pzip.org"
repository = "https://github.com/dcwatson/pz"

[dependencies]
clap = "~3"
ring = "0.17.0-alpha.11"
libdeflater = "~0.8"

[dev-dependencies]
hex = "~0.4"

[lib]
name = "pzip"
path = "src/lib.rs"

[[bin]]
name = "pz"
path = "src/main.rs"
